# cicd-hyper-a

./: .gitignore  CII-ENFORCEMENT.adoc  Cargo.toml  README.adoc
.audittraining/: ERROR-CATALOG.scm  README.md  training-data.pl
.audittraining/prevention/: README.md  branch-protection-enforcer.yml  cargo-audit.yml  codeql-template.yml
.audittraining/scripts/: batch-security-scan.jl  deploy-prevention-workflows.jl  quick-deploy.sh
.audittraining/security-errors/: SUMMARY.md  all_alerts.txt  bunsenite.md  czech-file-knife.md  echidnabot.md  gitvisor.md  polyglot-i18n.md  proof-of-work.md  supernorma.md  ubicity.md
.github/workflows/: mirror.yml  rust.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  STATE.scm
adapters/: Cargo.toml
adapters/src/: bitbucket.rs  error.rs  forge.rs  github.rs  gitlab.rs  lib.rs  main.rs  service.rs
adapters/tests/: seam_tests.rs
data/: Cargo.toml
data/src/: arangodb.rs  dragonfly.rs  error.rs  lib.rs  models.rs
deploy/: Dockerfile.adapter  Dockerfile.engine  Dockerfile.registry  docker-compose.yml  init-arangodb.js  prometheus.yml
engine/: loader.lgt
engine/rules/: cicd_rules.lgt  forge_adapters.lgt  learning.lgt  rule_distiller.lgt
hooks/: post-receive  pre-commit  pre-push  validate-pmpl.sh  validate-spdx.sh
integration/robot-repo-automaton/: config.yml
registry/: cicd-hyper-a.cabal
registry/src/: Main.hs
registry/src/CicdHyperA/: API.hs  Liquid.hs  Registry.hs  Ruleset.hs  Verify.hs
registry/test/: APISpec.hs  CLISpec.hs  LiquidSpec.hs  RulesetSpec.hs  Spec.hs  VerifySpec.hs
schemas/: arangodb-schema.json  dragonfly.yml  ruleset.schema.json
tools/cii-registrar/: Cargo.toml
tools/cii-registrar/src/: main.rs
