-- SPDX-License-Identifier: AGPL-3.0-or-later
cabal-version:      3.0
name:               cicd-hyper-a
version:            0.1.0.0
synopsis:           Type-safe CI/CD rule registry
description:        Neurosymbolic CI/CD intelligence platform.
                    Dumb rules from smart learning.
license:            AGPL-3.0-or-later
license-file:       ../LICENSE
author:             hyperpolymath
maintainer:         security@hyperpolymath.dev
category:           Development
build-type:         Simple
extra-doc-files:    ../README.adoc

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  CicdHyperA.Ruleset
                    , CicdHyperA.Verify
                    , CicdHyperA.Registry
                    , CicdHyperA.Liquid
                    , CicdHyperA.API
    build-depends:    base ^>=4.17
                    , text ^>=2.0
                    , containers ^>=0.6
                    , time ^>=1.12
                    , directory ^>=1.3
                    , filepath ^>=1.4
                    , aeson ^>=2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable registry
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17
                    , text ^>=2.0
                    , time ^>=1.12
                    , directory ^>=1.3
                    , filepath ^>=1.4
                    , cicd-hyper-a
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cicd-hyper-a-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    RulesetSpec
                    , VerifySpec
                    , LiquidSpec
                    , APISpec
                    , CLISpec
    build-depends:    base ^>=4.17
                    , text ^>=2.0
                    , cicd-hyper-a
                    , hspec ^>=2.11
                    , QuickCheck ^>=2.14
                    , aeson ^>=2.1
                    , bytestring ^>=0.11
                    , temporary ^>=1.3
    hs-source-dirs:   test
    default-language: Haskell2010
